--- a/index.html
+++ b/index.html
@@ -4,10 +4,100 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css.main">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="main.css">
   <title>Document</title>
-</head>
-<body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="main.js"></script>
+</head>
+
+<body>
+  <div class="cards container">
+
+    <div class="card" style="width: 18rem;">
+      <header>
+        <h2 class="card-title">Steve's Beans</h2>
+      </header>
+      <img src="https://cdn.pixabay.com/photo/2016/01/26/15/59/roasted-chestnuts-1162777_960_720.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text">Beans owned by a man named steven. Watch out, he wants them back.</p>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item" class="avail">Avaliable</li>
+        <li class="list-group-item">A second item</li>
+      </ul>
+      <div class="card-body">
+      </div>
+    </div>
+
+    <div class="card" style="width: 18rem;">
+      <header>
+        <h2 class="card-title">Gary's Beans</h2>
+      </header>
+      <img src="https://cdn.pixabay.com/photo/2021/09/17/12/12/coffee-6632524_960_720.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+
+        <p class="card-text">Gary's beans. I don't know man, he just wanted them listed.</p>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item" class="avail">Avaliable</li>
+        <li class="list-group-item">A second item</li>
+      </ul>
+      <div class="card-body">
+      </div>
+    </div>
+
+    <div class="card" style="width: 18rem;">
+      <header>
+        <h2 class="card-title">Linda's Beans</h2>
+      </header>
+      <img src="https://cdn.pixabay.com/photo/2018/09/25/20/09/bush-beans-3702999_960_720.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text">Linda's beans. Only the best organic Linda beans.</p>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item" class="avail">Avaliable</li>
+        <li class="list-group-item">A second item</li>
+        <li class="list-group-item">A third item</li>
+      </ul>
+      <div class="card-body">
+      </div>
+    </div>
+
+    <div class="card" style="width: 18rem;">
+      <header>
+        <h2 class="card-title">Plain Beans</h2>
+      </header>
+       <img src="https://cdn.pixabay.com/photo/2017/07/25/17/00/candy-2538878_960_720.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+
+        <p class="card-text">We honestly don't know much about these. We found them out back.</p>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item" class="avail">Avaliable</li>
+        <li class="list-group-item">A second item</li>
+        <li class="list-group-item">A third item</li>
+      </ul>
+      <div class="card-body">
+      </div>
+    </div>
+
+    <div class="card" style="width: 18rem;">
+      <header>
+          <h2 class="card-title">Flat Beans</h2>
+        </header>
+      <img src="https://cdn.pixabay.com/photo/2021/08/22/09/16/kidney-bean-6564631_960_720.jpg" height="100px" width="100px" class="card-img-top" alt="stevensbeans">
+      <div class="card-body">
+        <p class="card-text">Bad beans. We're trying to get rid of them.</p>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item" class="avail">Avaliable</li>
+        <li class="list-group-item">A second item</li>
+      </ul>
+      <div class="card-body">
+      </div>
+    </div>
+  </div>
+
 </body>
 </html>
