--- a/index.html
+++ b/index.html
@@ -23,10 +23,25 @@
         <p class="card-text">Beans owned by a man named steven. Watch out, he wants them back.</p>
       </div>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item" class="avail">Avaliable</li>
-        <li class="list-group-item">A second item</li>
+        <li class="list-group-item">Avaliable</li>
       </ul>
       <div class="card-body">
+        <header>
+          <h4>Specifications</h4>
+        </header>
+        <p>1-Hogshead</p>
+        <p>15lbs</p>
+        <footer>Valid until the heat death of the universe</footer>
+      </div>
+      <div class="pricing">
+        <header>
+          <h6>Pricing</h6>
+        </header>
+        <ul>
+          <li> 1 - $3.00</li>
+          <li> 5 - $6.00</li>
+          <li> 10 - $10.00</li>
+        </ul>
       </div>
     </div>
 
@@ -40,10 +55,25 @@
         <p class="card-text">Gary's beans. I don't know man, he just wanted them listed.</p>
       </div>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item" class="avail">Avaliable</li>
-        <li class="list-group-item">A second item</li>
+        <li class="list-group-item">Avaliable</li>
       </ul>
       <div class="card-body">
+        <header>
+          <h4>Specifications</h4>
+        </header>
+        <p>1-Hogshead</p>
+        <p>15lbs</p>
+        <footer>Valid until the heat death of the universe</footer>
+      </div>
+      <div class="pricing">
+        <header>
+          <h6>Pricing</h6>
+        </header>
+        <ul>
+          <li> 1 - $3.00</li>
+          <li> 5 - $6.00</li>
+          <li> 10 - $10.00</li>
+        </ul>
       </div>
     </div>
 
@@ -56,11 +86,25 @@
         <p class="card-text">Linda's beans. Only the best organic Linda beans.</p>
       </div>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item" class="avail">Avaliable</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
+        <li class="list-group-item">Avaliable</li>
       </ul>
       <div class="card-body">
+        <header>
+          <h4>Specifications</h4>
+        </header>
+        <p>1-Hogshead</p>
+        <p>15lbs</p>
+        <footer>Valid until the heat death of the universe</footer>
+      </div>
+      <div class="pricing">
+        <header>
+          <h6>Pricing</h6>
+        </header>
+        <ul>
+          <li> 1 - $3.00</li>
+          <li> 5 - $6.00</li>
+          <li> 10 - $10.00</li>
+        </ul>
       </div>
     </div>
 
@@ -74,11 +118,25 @@
         <p class="card-text">We honestly don't know much about these. We found them out back.</p>
       </div>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item" class="avail">Avaliable</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
+        <li class="list-group-item">Avaliable</li>
       </ul>
       <div class="card-body">
+        <header>
+          <h4>Specifications</h4>
+        </header>
+        <p>1-Hogshead</p>
+        <p>15lbs</p>
+        <footer>Valid until the heat death of the universe</footer>
+      </div>
+      <div class="pricing">
+        <header>
+          <h6>Pricing</h6>
+        </header>
+        <ul>
+          <li> 1 - $3.00</li>
+          <li> 5 - $6.00</li>
+          <li> 10 - $10.00</li>
+        </ul>
       </div>
     </div>
 
@@ -86,15 +144,30 @@
       <header>
           <h2 class="card-title">Flat Beans</h2>
         </header>
-      <img src="https://cdn.pixabay.com/photo/2021/08/22/09/16/kidney-bean-6564631_960_720.jpg" height="100px" width="100px" class="card-img-top" alt="stevensbeans">
+      <img src="https://cdn.pixabay.com/photo/2021/08/22/09/16/kidney-bean-6564631_960_720.jpg" class="card-img-top" alt="stevensbeans">
       <div class="card-body">
         <p class="card-text">Bad beans. We're trying to get rid of them.</p>
       </div>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item" class="avail">Avaliable</li>
-        <li class="list-group-item">A second item</li>
+        <li class="list-group-item">Avaliable</li>
       </ul>
       <div class="card-body">
+        <header>
+          <h4>Specifications</h4>
+        </header>
+        <p>1-Hogshead</p>
+        <p>15lbs</p>
+        <footer>Valid until the heat death of the universe</footer>
+      </div>
+      <div class="pricing">
+        <header>
+          <h6>Pricing</h6>
+        </header>
+        <ul>
+          <li> 1 - $3.00</li>
+          <li> 5 - $6.00</li>
+          <li> 10 - $10.00</li>
+        </ul>
       </div>
     </div>
   </div>
